force-app/main/default/objects/NPD_Request__c/NPD_Request__c.object-meta.xml
<CustomObject>
    <description>Proforma for New Product Design requests

Stage before the design breif</description>
    <label>NPD Request</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>NPD Request Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NPD Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>