force-app/main/default/objects/NPD_Request__c/fields/Carbonated_Level_g_CO2_litre__c.field-meta.xml
<CustomField>
    <fullName>Carbonated_Level_g_CO2_litre__c</fullName>
    <label>Carbonated Level (g CO2/litre)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>