force-app/main/default/objects/NPD_Request__c/fields/Competitor_s_Drawing_Attached__c.field-meta.xml
<CustomField>
    <fullName>Competitor_s_Drawing_Attached__c</fullName>
    <description>Competitor&apos;s Drawing Attached</description>
    <label>Competitor&apos;s Drawing Attached</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>