force-app/main/default/objects/NPD_Request__c/fields/Competitor_s_Reference_Number__c.field-meta.xml
<CustomField>
    <fullName>Competitor_s_Reference_Number__c</fullName>
    <description>Competitor&apos;s Reference Number</description>
    <label>Competitor&apos;s Reference Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>