force-app/main/default/objects/NPD_Request__c/fields/Container_Description__c.field-meta.xml
<CustomField>
    <fullName>Container_Description__c</fullName>
    <label>Container Description</label>
    <type>TextArea</type>
</CustomField>