force-app/main/default/objects/NPD_Request__c/fields/Costings_Completed_By_Commercial_Manager__c.field-meta.xml
<CustomField>
    <fullName>Costings_Completed_By_Commercial_Manager__c</fullName>
    <description>Costings Completed By Commercial Manager for design brief</description>
    <label>Costings Completed By Commercial Manager</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>