force-app/main/default/objects/NPD_Request__c/fields/Customer_Contact__c.field-meta.xml
<CustomField>
    <fullName>Customer_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Customer_Contact look up</description>
    <label>Customer Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>NPD Requests</relationshipLabel>
    <relationshipName>NPD_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>