force-app/main/default/objects/NPD_Request__c/fields/Design_Brief_Created__c.field-meta.xml
<CustomField>
    <fullName>Design_Brief_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checks box after the design brief is created</description>
    <label>Design Brief Created</label>
    <type>Checkbox</type>
</CustomField>