force-app/main/default/objects/NPD_Request__c/fields/Design_Brief_SR_001_Rev_6__c.field-meta.xml
<CustomField>
    <fullName>Design_Brief_SR_001_Rev_6__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Created design brief</description>
    <inlineHelpText>Created design brief</inlineHelpText>
    <label>Design Brief (SR-001 Rev 6)</label>
    <referenceTo>Design_Brief__c</referenceTo>
    <relationshipLabel>NPD Requests</relationshipLabel>
    <relationshipName>NPD_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>