force-app/main/default/objects/NPD_Request__c/fields/Embossed__c.field-meta.xml
<CustomField>
    <fullName>Embossed__c</fullName>
    <description>Embossed for design brief yes / no</description>
    <label>Embossed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>