force-app/main/default/objects/NPD_Request__c/fields/Estimated_Volume_000_s__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Volume_000_s__c</fullName>
    <label>Estimated Volume (000&apos;s)</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>