force-app/main/default/objects/NPD_Request__c/fields/Existing_Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>Existing_Customer_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Existing Customer Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>NPD Requests</relationshipLabel>
    <relationshipName>NPD_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>