force-app/main/default/objects/NPD_Request__c/fields/Existing_SKU__c.field-meta.xml
<CustomField>
    <fullName>Existing_SKU__c</fullName>
    <label>Existing SKU?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>