force-app/main/default/objects/NPD_Request__c/fields/Filling_Process_Type__c.field-meta.xml
<CustomField>
    <fullName>Filling_Process_Type__c</fullName>
    <description>Filling process type for design brief</description>
    <label>Filling Process Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hot</fullName>
            </value>
            <value>
                <fullName>Cold</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>