force-app/main/default/objects/NPD_Request__c/fields/Form_Complete__c.field-meta.xml
<CustomField>
    <fullName>Form_Complete__c</fullName>
    <description>replaces the checkbox originally used
Selecting Yes and Saving will send the form email</description>
    <inlineHelpText>Is the form ready to be emailed to the NPD team? 
Selecting yes and saving will send an email.</inlineHelpText>
    <label>Form Complete</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NO</fullName>
            </value>
            <value>
                <fullName>YES</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>