force-app/main/default/objects/NPD_Request__c/fields/Glass_Colour__c.field-meta.xml
<CustomField>
    <fullName>Glass_Colour__c</fullName>
    <label>Glass Colour</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Glass_Colour</valueSetName>
    </valueSet>
</CustomField>