force-app/main/default/objects/NPD_Request__c/fields/Glass_Finish_Details__c.field-meta.xml
<CustomField>
    <fullName>Glass_Finish_Details__c</fullName>
    <description>Glass Finish Details for design brief</description>
    <label>Glass Finish Details</label>
    <type>TextArea</type>
</CustomField>