force-app/main/default/objects/NPD_Request__c/fields/If_No_Line_Audit_Date_Who_Is_Responsible__c.field-meta.xml
<CustomField>
    <fullName>If_No_Line_Audit_Date_Who_Is_Responsible__c</fullName>
    <description>matching field to design brief</description>
    <label>If No Line Audit Date Who Is Responsible</label>
    <type>TextArea</type>
</CustomField>