force-app/main/default/objects/NPD_Request__c/fields/Line_Audit_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Line_Audit_Completed_Date__c</fullName>
    <description>date field needed for conversion to design brief due to validation</description>
    <label>Line Audit Completed Date</label>
    <type>Date</type>
</CustomField>