force-app/main/default/objects/NPD_Request__c/fields/Line_Audit_Required__c.field-meta.xml
<CustomField>
    <fullName>Line_Audit_Required__c</fullName>
    <label>Line Audit Required?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>