force-app/main/default/objects/NPD_Request__c/fields/NPD_Stage__c.field-meta.xml
<CustomField>
    <fullName>NPD_Stage__c</fullName>
    <label>NPD Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NPD Request</fullName>
                <default>true</default>
                <label>NPD Request</label>
            </value>
            <value>
                <fullName>Design Brief</fullName>
            </value>
            <value>
                <fullName>Drawing Created</fullName>
            </value>
            <value>
                <fullName>MPA Approved for Trial moulds</fullName>
            </value>
            <value>
                <fullName>Trial Moulds Ordered</fullName>
            </value>
            <value>
                <fullName>Trial Mould Equip Delivery Date</fullName>
            </value>
            <value>
                <fullName>Trial Date</fullName>
            </value>
            <value>
                <fullName>Trial Samples sent to customer</fullName>
            </value>
            <value>
                <fullName>MPA Approved for Bulk Moulds</fullName>
            </value>
            <value>
                <fullName>Bulk Moulds Ordered</fullName>
            </value>
            <value>
                <fullName>Bulk Moulds Delivery date</fullName>
            </value>
            <value>
                <fullName>2 Day Production Run Approved</fullName>
            </value>
            <value>
                <fullName>Customer Approved for Bulk Glass</fullName>
            </value>
            <value>
                <fullName>Site Approved Bulk Glass Production</fullName>
            </value>
            <value>
                <fullName>NPD Void</fullName>
            </value>
            <value>
                <fullName>NPD Closed</fullName>
            </value>
            <value>
                <fullName>NPD stopped; mould equipment was purchased</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>