force-app/main/default/objects/NPD_Request__c/fields/Other_Colour__c.field-meta.xml
<CustomField>
    <fullName>Other_Colour__c</fullName>
    <label>Other Colour</label>
    <type>TextArea</type>
</CustomField>