force-app/main/default/objects/NPD_Request__c/fields/Other_Information__c.field-meta.xml
<CustomField>
    <fullName>Other_Information__c</fullName>
    <description>information to be moved to the Design brief through automation</description>
    <label>Other Information</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>