force-app/main/default/objects/NPD_Request__c/fields/Pack_Spec_Available__c.field-meta.xml
<CustomField>
    <fullName>Pack_Spec_Available__c</fullName>
    <label>Pack Spec Available?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>