force-app/main/default/objects/NPD_Request__c/fields/Potential_Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>Potential_Customer_Name__c</fullName>
    <inlineHelpText>Use this field if the customer is not already an existing customer</inlineHelpText>
    <label>Potential Customer Name</label>
    <length>35</length>
    <type>Text</type>
</CustomField>