force-app/main/default/objects/NPD_Request__c/fields/Refillable__c.field-meta.xml
<CustomField>
    <fullName>Refillable__c</fullName>
    <label>Refillable</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>