force-app/main/default/objects/NPD_Request__c/fields/Report_Complete__c.field-meta.xml
<CustomField>
    <fullName>Report_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Is the form ready to be emailed to the NPD team?</inlineHelpText>
    <label>Form Complete</label>
    <type>Checkbox</type>
</CustomField>