force-app/main/default/objects/NPD_Request__c/fields/Requested_Bulk_Glass_Date__c.field-meta.xml
<CustomField>
    <fullName>Requested_Bulk_Glass_Date__c</fullName>
    <label>Requested Bulk Glass Date</label>
    <type>Date</type>
</CustomField>