force-app/main/default/objects/NPD_Request__c/fields/Shape__c.field-meta.xml
<CustomField>
    <fullName>Shape__c</fullName>
    <label>Shape</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Round</fullName>
            </value>
            <value>
                <fullName>Non Round</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>