force-app/main/default/objects/NPD_Request__c/fields/TypeOfDesign__c.field-meta.xml
<CustomField>
    <fullName>TypeOfDesign__c</fullName>
    <description>Copied from design brief</description>
    <label>Type Of Design</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Product</fullName>
            </value>
            <value>
                <fullName>Counter Spec</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>