force-app/main/default/objects/NPD_Request__c/fields/Weight_g_If_known__c.field-meta.xml
<CustomField>
    <fullName>Weight_g_If_known__c</fullName>
    <label>Weight (g) (If known)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>