force-app/main/default/objects/NPD_Request__c/listViews/Active.listView-meta.xml
<ListView>
    <fullName>Active</fullName>
    <columns>NAME</columns>
    <columns>NPD_Stage__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Existing_Customer_Name__c</columns>
    <columns>Potential_Customer_Name__c</columns>
    <columns>Container_Description__c</columns>
    <columns>Form_Complete__c</columns>
    <columns>Design_Brief_Created__c</columns>
    <columns>Design_Brief_SR_001_Rev_6__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NPD_Stage__c</field>
        <operation>notEqual</operation>
        <value>NPD Void</value>
    </filters>
    <label>Active</label>
</ListView>