force-app/main/default/objects/NPD_Request__c/listViews/Owner_view.listView-meta.xml
<ListView>
    <fullName>Owner_view</fullName>
    <columns>NAME</columns>
    <columns>NPD_Stage__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Existing_Customer_Name__c</columns>
    <columns>Potential_Customer_Name__c</columns>
    <columns>Container_Description__c</columns>
    <columns>Form_Complete__c</columns>
    <columns>Design_Brief_Created__c</columns>
    <columns>Design_Brief_SR_001_Rev_6__c</columns>
    <filterScope>Mine</filterScope>
    <label>Owner view</label>
</ListView>